<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/statics"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:background="@color/main_background"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/df_circle_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/df_circle"
                android:layout_width="@dimen/single_circle_size"
                android:layout_height="@dimen/single_circle_size"
                android:background="@drawable/data_flow_remain_20"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/df_remained"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/df_remained"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/df_remained_str"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/df_remained_title"
                    android:textSize="11sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/df_all_str"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/df_all_title"
                        android:textSize="10sp"/>
                    <TextView
                        android:id="@+id/df_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/df_remained"
                        android:textSize="10sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/data_stat_description"
            android:textColor="?android:attr/textColorSecondary"/>

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center"
            android:background="@drawable/shape_dataflow"
            android:singleLine="true"
            android:textAllCaps="false"
            android:text="@string/data_restrict_sim"
            android:textSize="15sp"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/pref"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_weight="1">
    </FrameLayout>
</LinearLayout>